--- a/index.css
+++ b/index.css
@@ -9,8 +9,13 @@ html, body{
   margin-bottom: 2.5%;
   margin-left: 30%;
   width: 40%;
+  border-radius: 5px;
 }
 
 #allergies {
   resize: vertical;
+}
+
+#datepicker {
+  width: auto;
 }
